--- a/Shopping_List/assets/css/style.css
+++ b/Shopping_List/assets/css/style.css
@@ -8,11 +8,11 @@ body {
     line-height: 21px;
     color: white;
 }
-
+/*
 * {
     transition: all .1s ease-in;
 }
-
+*/
 h1,
 h2,
 h3 {
@@ -92,14 +92,21 @@ main div > *:hover {
     background-color: #625E77;
     border-top: 3px solid #ffffff;
     border-bottom: 3px solid #ffffff;
+    padding: 9px 0 9px 0;
+    cursor: pointer;
 }
 
-main div > *:focus:active {
-    background-color: #FF8984;
+main div > *:focus-within {
+    background-color: #625E77;
+    border-top: 3px solid #ffffff;
+    border-bottom: 3px solid #ffffff;
+    padding: 9px 0 9px 0;
+    cursor: pointer;
 }
 
 main div > *:active {
     background-color: #FF8984;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 input:checked + label,
@@ -107,4 +114,8 @@ input:checked + span,
 input:checked + span + span {
     color: #9B96AC;
     text-decoration: line-through;
+}
+
+label span:first-of-type {
+    margin-left: 16px;
 }
