--- a/Shopping_List/assets/css/style.css
+++ b/Shopping_List/assets/css/style.css
@@ -95,7 +95,7 @@ main div > *:hover {
     padding: 9px 0 9px 0;
     cursor: pointer;
 }
-
+/*
 main div > *:focus-within {
     background-color: #625E77;
     border-top: 3px solid #ffffff;
@@ -103,7 +103,7 @@ main div > *:focus-within {
     padding: 9px 0 9px 0;
     cursor: pointer;
 }
-
+*/
 main div > *:active {
     background-color: #FF8984;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
