--- a/Weather_Forecast/assets/css/style.css
+++ b/Weather_Forecast/assets/css/style.css
@@ -57,10 +57,6 @@ h1 + span {
     border: 2px solid #FFFFFF;
 }
 
-li:hover {
-    opacity: 1;
-}
-
 li {
     max-width: 25%;
     text-align: center;
@@ -68,7 +64,15 @@ li {
     border: 2px solid #FFFFFF;
     padding: 27px 0;
     width: 100%;
-    opacity: 0.7;
+    opacity: 1;
+}
+
+.content__tabble:hover li {
+    opacity: 0.5;
+}
+
+.content__tabble:hover li:hover {
+    opacity: 1;
 }
 
 p + p {
