--- a/ITlife/assets/css/style.css
+++ b/ITlife/assets/css/style.css
@@ -152,6 +152,7 @@ body {
     perspective: 1000px;
     width: 270px;
     height: 270px;
+    transform-style: preserve-3d;
 }
 
 .personnel-card__front {
