--- a/Konstruct/assets/css/style.css
+++ b/Konstruct/assets/css/style.css
@@ -24,6 +24,7 @@ body {
     width: 100%;
     background-color: #fff;
     top: 0;
+    z-index: 1;
 }
 
 .container {
@@ -75,17 +76,6 @@ body {
     color: var(--text);
 }
 
-.main__background {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-}
-
-.background__img {
-    margin-left: 692px;
-}
-
 .main__block {
     margin-top: 150px;
     margin-bottom: 90px;
@@ -133,6 +123,17 @@ body {
     display: flex;
     flex-direction: column;
     gap: 70px;
+    position: relative;
+}
+
+.main-content__background {
+    position: fixed;
+    z-index: -1;
+}
+
+.background__img {
+    position: absolute;
+    margin-left: 277px;
 }
 
 .main-content__block {
