--- a/Freehand/assets/css/style.css
+++ b/Freehand/assets/css/style.css
@@ -143,7 +143,7 @@ body {
     border-radius: 16px;
 }
 
-.service-item:hover .buttonon {
+.service-item:hover .button {
     border: 1px solid rgba(61, 179, 112, 0.1);
 }
 
