--- a/Second_Manifest/assets/css/_footer.scss
+++ b/Second_Manifest/assets/css/_footer.scss
@@ -6,6 +6,15 @@
 	}
 
 	&__wrapper {
+		padding-top: 70px;
+		padding-bottom: 30px;
+
+		@media screen and (max-width: $tablet) {
+			padding: 50px 0;
+		}
+	}
+
+	&__media {
 		display: flex;
 		flex-direction: row;
 		justify-content: space-between;
@@ -13,6 +22,7 @@
 
 		@media screen and (max-width: $tablet) {
 			flex-direction: column;
+			gap: 0;
 		}
 	}
 
@@ -28,18 +38,14 @@
 		@media screen and (max-width: $tablet) {
 			align-items: center;
 		}
-
-		&--margin {
-			margin-top: 70px;
-		}
-
-		@media screen and (max-width: $tablet) {
-			margin-top: 50px;
-		}
 	}
 
 	&__title {
 		@include footerTitle;
+
+		@media screen and (max-width: $tablet) {
+			text-align: center;
+		}
 
 		&--margin {
 			margin-bottom: 30px;
@@ -76,16 +82,17 @@
 		display: flex;
 		flex-direction: column;
 		align-items: end;
+		justify-content: center;
+
+		height: 100%;
 
 		@media screen and (max-width: $tablet) {
 			align-items: center;
 		}
 
 		&--margin {
-			margin-top: 125px;
-
 			@media screen and (max-width: $tablet) {
-				margin: 20px 0 10px 0;
+				margin: 40px 0;
 			}
 		}
 	}
@@ -97,7 +104,11 @@
 		@include copyright;
 
 		&--padding {
-			padding: 30px 0 16px 0;
+			margin-top: 20px;
+
+			@media screen and (max-width: $tablet) {
+				margin-top: 0;
+			}
 		}
 	}
 }
