--- a/First_Manifest/assets/css/_arrow.scss
+++ b/First_Manifest/assets/css/_arrow.scss
@@ -19,11 +19,15 @@
 
 		display: inline-flex;
 		transform: scale(0);
+
+		transition: all 0.2s linear;
 	}
 
 	&__img {
 		fill: $grey500;
 		transform: translateX(-85px);
+
+		transition: all 0.2s linear;
 	}
 
 	&:hover,
