--- a/First_Manifest/assets/css/_blog-post.scss
+++ b/First_Manifest/assets/css/_blog-post.scss
@@ -11,7 +11,7 @@
 		flex-direction: row;
 
 		@media screen and (max-width: $tabletSmall) {
-			flex-direction: column;
+			flex-direction: column-reverse;
 			gap: 30px;
 		}
 	}
@@ -19,8 +19,12 @@
 	&:nth-child(2n) {
 		flex-direction: row-reverse;
 
+		& > *:last-child {
+			justify-content: flex-end;
+		}
+
 		@media screen and (max-width: $tabletSmall) {
-			flex-direction: column;
+			flex-direction: column-reverse;
 			gap: 30px;
 		}
 	}
@@ -37,6 +41,12 @@
 	&__content-wrapper {
 		max-width: 50%;
 		width: 100%;
+		display: flex;
+
+		@media screen and (max-width: $tabletSmall) {
+			flex-direction: column-reverse;
+			gap: 30px;
+		}
 
 		@media screen and (max-width: $tabletSmall) {
 			max-width: 100%;
@@ -53,6 +63,11 @@
 		justify-content: center;
 		flex-direction: column;
 		height: 100%;
+		width: 450px;
+
+		@media screen and (max-width: $smallDT) {
+			width: 100%;
+		}
 	}
 
 	&__tag {
@@ -66,6 +81,7 @@
 			font-size: 1.6rem;
 			line-height: 2.7rem;
 		}
+
 		&--margin {
 			margin-bottom: 30px;
 		}
