--- a/First_Manifest/assets/css/_popular.scss
+++ b/First_Manifest/assets/css/_popular.scss
@@ -58,10 +58,14 @@
 		line-height: 2.7rem;
 		letter-spacing: 0.1em;
 		color: $grey500;
+
+		transition: all 0.3s linear;
 	}
 
 	&__link-svg {
 		fill: $grey500;
+
+		transition: all 0.3s linear;
 	}
 
 	&__wrapper {
@@ -99,6 +103,8 @@
 		color: $white;
 
 		text-decoration: none;
+
+		transition: all 0.3s linear;
 
 		&:hover {
 			background-color: $black;
