--- a/First_Manifest/assets/css/style.css
+++ b/First_Manifest/assets/css/style.css
@@ -886,6 +886,7 @@ html {
   height: 1px;
   background-color: #000000;
   transform: scale(0);
+  transition: all 0.2s linear;
 }
 .header__menu-item:active {
   color: #000000;
@@ -938,7 +939,6 @@ html {
 }
 .first-screen__img {
   width: 100%;
-  height: auto;
 }
 .first-screen__content {
   position: absolute;
@@ -1004,18 +1004,16 @@ html {
   .first-screen__title {
     font-size: 3rem;
     line-height: 5rem;
-    max-width: 70%;
     margin-top: 70px;
   }
 }
 @media screen and (max-width: 320px) {
   .first-screen__title {
-    max-width: 90%;
+    max-width: 100%;
   }
 }
 @media screen and (max-width: 300px) {
   .first-screen__title {
-    max-width: 100%;
     margin-top: 10px;
   }
 }
@@ -1037,10 +1035,12 @@ html {
   color: #000000;
   display: inline-flex;
   transform: scale(0);
+  transition: all 0.2s linear;
 }
 .arrow__img {
   fill: #7b7b7b;
   transform: translateX(-85px);
+  transition: all 0.2s linear;
 }
 .arrow:hover .arrow__img, .arrow:active .arrow__img {
   fill: #000000;
@@ -1119,16 +1119,19 @@ html {
 }
 @media screen and (max-width: 650px) {
   .blog-post:nth-child(2n+1) {
-    flex-direction: column;
+    flex-direction: column-reverse;
     gap: 30px;
   }
 }
 .blog-post:nth-child(2n) {
   flex-direction: row-reverse;
 }
+.blog-post:nth-child(2n) > *:last-child {
+  justify-content: flex-end;
+}
 @media screen and (max-width: 650px) {
   .blog-post:nth-child(2n) {
-    flex-direction: column;
+    flex-direction: column-reverse;
     gap: 30px;
   }
 }
@@ -1144,6 +1147,13 @@ html {
 .blog-post__content-wrapper {
   max-width: 50%;
   width: 100%;
+  display: flex;
+}
+@media screen and (max-width: 650px) {
+  .blog-post__content-wrapper {
+    flex-direction: column-reverse;
+    gap: 30px;
+  }
 }
 @media screen and (max-width: 650px) {
   .blog-post__content-wrapper {
@@ -1159,6 +1169,12 @@ html {
   justify-content: center;
   flex-direction: column;
   height: 100%;
+  width: 450px;
+}
+@media screen and (max-width: 1300px) {
+  .blog-post__content {
+    width: 100%;
+  }
 }
 .blog-post__tag {
   font-family: "Lato", sans-serif;
@@ -1314,9 +1330,11 @@ html {
   line-height: 2.7rem;
   letter-spacing: 0.1em;
   color: #7b7b7b;
+  transition: all 0.3s linear;
 }
 .latest-posts__link-svg {
   fill: #7b7b7b;
+  transition: all 0.3s linear;
 }
 .latest-posts__wrapper {
   display: flex;
@@ -1553,9 +1571,11 @@ html {
   line-height: 2.7rem;
   letter-spacing: 0.1em;
   color: #7b7b7b;
+  transition: all 0.3s linear;
 }
 .popular__link-svg {
   fill: #7b7b7b;
+  transition: all 0.3s linear;
 }
 .popular__wrapper {
   display: flex;
@@ -1589,6 +1609,7 @@ html {
   letter-spacing: 0.1em;
   color: #ffffff;
   text-decoration: none;
+  transition: all 0.3s linear;
 }
 .popular__button:hover {
   background-color: #000000;
@@ -1817,14 +1838,24 @@ html {
   }
 }
 .footer__wrapper {
+  padding-top: 70px;
+  padding-bottom: 30px;
+}
+@media screen and (max-width: 950px) {
+  .footer__wrapper {
+    padding: 50px 0;
+  }
+}
+.footer__media {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   gap: 20px;
 }
 @media screen and (max-width: 950px) {
-  .footer__wrapper {
+  .footer__media {
     flex-direction: column;
+    gap: 0;
   }
 }
 .footer__left, .footer__right {
@@ -1837,14 +1868,6 @@ html {
 @media screen and (max-width: 950px) {
   .footer__left-wrapper {
     align-items: center;
-  }
-}
-.footer__left-wrapper--margin {
-  margin-top: 70px;
-}
-@media screen and (max-width: 950px) {
-  .footer__left-wrapper {
-    margin-top: 50px;
   }
 }
 .footer__title {
@@ -1913,18 +1936,17 @@ html {
   display: flex;
   flex-direction: column;
   align-items: end;
+  justify-content: center;
+  height: 100%;
 }
 @media screen and (max-width: 950px) {
   .footer__right-wrapper {
     align-items: center;
   }
 }
-.footer__right-wrapper--margin {
-  margin-top: 125px;
-}
 @media screen and (max-width: 950px) {
   .footer__right-wrapper--margin {
-    margin: 20px 0 10px 0;
+    margin: 40px 0;
   }
 }
 .footer__copyright {
@@ -1944,7 +1966,12 @@ html {
   }
 }
 .footer__copyright--padding {
-  padding: 30px 0 16px 0;
+  margin-top: 20px;
+}
+@media screen and (max-width: 850px) {
+  .footer__copyright--padding {
+    margin-top: 0;
+  }
 }
 
 .link-bar__menu {
@@ -1967,6 +1994,7 @@ html {
   width: 50px;
   padding: 10px;
   border: 1px solid #565656;
+  transition: all 0.5s linear;
 }
 .link-bar__link:hover {
   background-color: #565656;
