--- a/Forms_2-0/assets/css/_profile.scss
+++ b/Forms_2-0/assets/css/_profile.scss
@@ -60,7 +60,11 @@
 	&__button {
 		@include button;
 		margin-top: 20px;
-		padding: 8px 10px;
-		width: 150px;
+		padding: 8px 50px;
+		/*
+		Мені фігма внутрішні відступи до
+		тексту в цій кнопці не показує 8( 
+		Тому width і задавав.
+		*/
 	}
 }
