--- a/Navigation/assets/css/_main.scss
+++ b/Navigation/assets/css/_main.scss
@@ -73,10 +73,12 @@
 
 .main {
 	@include backgroundColor($bgLight);
+	width: 100%;
 
 	&__wrapper {
 		display: flex;
 		flex-direction: column;
+		width: 100%;
 	}
 
 	&__site-container {
@@ -84,8 +86,8 @@
 	}
 
 	&__site-img {
-		max-width: 100%;
-		max-height: 100%;
+		width: 100%;
+		height: 100%;
 
 		&--dark {
 			position: absolute;
