--- a/Navigation/assets/css/style.css
+++ b/Navigation/assets/css/style.css
@@ -807,7 +807,7 @@ html {
 }
 .body__container {
   margin: 0 auto;
-  max-width: 1440px;
+  width: 100%;
 }
 .body__wrapper {
   display: flex;
@@ -874,17 +874,19 @@ html {
 
 .main {
   background-color: #ffffff;
+  width: 100%;
 }
 .main__wrapper {
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 .main__site-container {
   position: relative;
 }
 .main__site-img {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
 }
 .main__site-img--dark {
   position: absolute;
