--- a/Solis__Project__1/assets/css/_background.scss
+++ b/Solis__Project__1/assets/css/_background.scss
@@ -1,6 +1,6 @@
 .body {
+	@include backgroundColor($darkBackground);
 	&__all {
-		@include backgroundColor($darkBackground);
 		padding-top: 3rem;
 
 		@media screen and (max-width: $desktop) {
@@ -14,7 +14,7 @@
 
 	&__background-wrapper {
 		position: absolute;
-
+		z-index: -1;
 		max-width: 100vw;
 
 		top: 0;
