--- a/Solis__Project__1/assets/css/style.css
+++ b/Solis__Project__1/assets/css/style.css
@@ -919,8 +919,10 @@ html {
   }
 }
 
-.body__all {
+.body {
   background-color: #161926;
+}
+.body__all {
   padding-top: 3rem;
 }
 @media screen and (max-width: 1439px) {
@@ -930,6 +932,7 @@ html {
 }
 .body__background-wrapper {
   position: absolute;
+  z-index: -1;
   max-width: 100vw;
   top: 0;
   bottom: 0;
@@ -1051,7 +1054,6 @@ html {
   }
 }
 .first__title {
-  position: relative;
   font-family: "Playfair Display", serif;
   font-weight: 400;
   font-size: 4.4rem;
@@ -1065,7 +1067,6 @@ html {
   color: #689ff2;
 }
 .first__text {
-  position: relative;
   font-family: "Lato", sans-serif;
   font-weight: 300;
   font-size: 1.8rem;
