--- a/Solis__Project__2/assets/css/_info.scss
+++ b/Solis__Project__2/assets/css/_info.scss
@@ -35,16 +35,16 @@
 
 		@media screen and (max-width: $tablet) {
 			position: absolute;
-			top: -4.5rem;
+			top: 4.5rem;
 		}
 	}
 
 	&__img {
 		max-width: 100%;
 
-		//@media screen and (max-width: $desktop) {
-		//	max-width: dinamic-desktop(1170px);
-		//}
+		@media screen and (max-width: $desktop) {
+			max-width: dinamic-desktop(1170px);
+		}
 	}
 
 	&__content {
