--- a/Solis__Project__1/assets/css/_info.scss
+++ b/Solis__Project__1/assets/css/_info.scss
@@ -42,9 +42,9 @@
 	&__img {
 		max-width: 100%;
 
-		//@media screen and (max-width: $desktop) {
-		//	max-width: dinamic-desktop(1170px);
-		//}
+		@media screen and (max-width: $desktop) {
+			max-width: dinamic-desktop(1170px);
+		}
 	}
 
 	&__content {
