--- a/Solis__Project__2/assets/css/style.css
+++ b/Solis__Project__2/assets/css/style.css
@@ -1779,7 +1779,7 @@ html {
 }
 @media screen and (max-width: 1439px) {
   .promises__img {
-    max-width: 81.25vw;
+    width: 81.25vw;
   }
 }
 .promises__content {
